# ScenarioGenerator_ProofOfConcept

./: .gitignore  Main.py  PackageInstaller.ps1  README.md  pyproject.toml
Core/: ScenarioManager.py  ScenarioRecorder.py  ScreenshootLogic.py  ScreenshootService.py
Core/API/: GPTClient.Py  OpenAIClient.py  PromptBuilder.py
Core/Description/: DescriptionService.py
Core/Excel/: ExcelGenerator.py
Core/Screenshot/: ScreenshotLogic.py  ScreenshotService.py
Templates/: Template.xlsm
Utils/: config.py
src/: Main.py
src/Core/: ScenarioManager.py  ScenarioRecorder.py
src/Core/API/: OpenAIClient.py  PromptBuilder.py
src/Core/Description/: DescriptionService.py
src/Core/Excel/: ExcelGenerator.py
src/Core/Screenshot/: ScreenshotLogic.py  ScreenshotService.py
src/Utils/: errorHandler.py  logger.py
